--- a/packages/pos/simulator/view/pos/hardware/Screen.html
+++ b/packages/pos/simulator/view/pos/hardware/Screen.html
@@ -154,10 +154,10 @@
     }
 
     :global(.Q92 .screen) {
-      top: 135px;
+      top: 115px;
       left: 54px;
       width: 240px;
-      height: 370px;
+      height: 390px; /* (370px + 20px from status bar) */
     }
 
     .content {
