--- a/packages/components/Keyboard/StaticMathKeyboard.html
+++ b/packages/components/Keyboard/StaticMathKeyboard.html
@@ -2,7 +2,7 @@
   ! This keyboard doesn't have functionality. Is intended to use it was skin for backend touch keyboard.
  -->
 <div
-  class="mb-keyboard mb-keyboard-generic-wrapper debug mb-layout-name-math mb-layout-vertical mb-keyboard-theme-default mb-keyboard-theme-math"
+  class="mb-keyboard mb-keyboard-generic-wrapper mb-layout-name-math mb-layout-vertical mb-keyboard-theme-default mb-keyboard-theme-math"
 >
   <div class="mb-columns">
     <div class="mb-column">
