--- a/packages/components/Keyboard/KeyboardInput.html
+++ b/packages/components/Keyboard/KeyboardInput.html
@@ -40,10 +40,7 @@
 
 <script>
   import Keyboard, { KeyboardType } from './lib/index.js';
-  import './css/Keyboard.css';
   import './css/KeyboardMathTheme.css';
-
-  console.log(KeyboardType);
 
   export default {
     components: {
@@ -129,8 +126,9 @@
         // },
         debug: __DEV__ || __DEBUG_LVL__ >= 3,
         keepVisible: true,
+        // keyboardType: KeyboardType.Default,
         keyboardType: KeyboardType.Math,
-        layoutCandidates: {
+        layoutSuggestions: {
           e: 'é',
         },
         /* layout: {
