feat: 🎸 finalized numeric keyboard

--- a/packages/components/Keyboard/KeyboardInput.html
+++ b/packages/components/Keyboard/KeyboardInput.html
@@ -127,7 +127,8 @@
         debug: __DEV__ || __DEBUG_LVL__ >= 3,
         keepVisible: true,
         // keyboardType: KeyboardType.Default,
-        keyboardType: KeyboardType.Math,
+        // keyboardType: KeyboardType.Math,
+        keyboardType: KeyboardType.Numeric,
         layoutSuggestions: {
           e: 'é',
         },
